# paragraph-typer

./: Cargo.toml  README.md
src/: app.rs  main.rs  setup.rs  time.rs  utils.rs
