[package]
name = "typing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
crossterm = "0.24.0"
rand = "0.8.5"
serde = { version = "1.0.139", features = ["derive"] }
unicode-width = "0.1.9"
ureq = { version = "2.5.0", features = ["json"] }
